# ChurchToolsAPI

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  ChurchToolsApi.py  README.md  TestsChurchToolsApi.py  Tests_ChurchToolsApi.py  api.sh  generate_pyproj.py  logging_config.json  main.ipynb  main.py  main_web.py  pyproject.toml  readme.md  release-please-config.json  requirements.txt  setup.py  version.py  versions.py
.github/workflows/: codeql.yml  docker-image.yml  docker-image_dev_benste.yml  docker-image_master.yml  publish.yml  python-package.yml  python-unittest.yml  release.yml
ChurchToolsAPI/: ChurchToolsApi.py  __init__.py
ChurchToolsApi/: __init__.py  test_ChurchToolsApi.py
ChurchToolsWebService/: ChurchToolsWebService.py  __init__.py  __main__.py
ChurchToolsWebService/docker/: Dockerfile
ChurchToolsWebService/static/: style.css
ChurchToolsWebService/templates/: error.html  events.html  header.html  login.html  login_churchtools.html  login_communi.html  main.html  test.html
churchtools_api/: CHANGELOG.md  __init__.py  calendar.py  churchtools_api.py  churchtools_api_abstract.py  events.py  files.py  groups.py  persons.py  posts.py  ratelimitedsession.py  resources.py  songs.py  tags.py
docker/: Dockerfile  docker_built_with_version.sh  requirements.txt
run_configs/: docker build.run.xml
samples/: test_umläut.txt
secure/: defaults.py  secrets.py
tests/: TestsChurchToolsApi.py  test_churchtools_api.py  test_churchtools_api_abstract.py  test_churchtools_api_calendars.py  test_churchtools_api_events.py  test_churchtools_api_files.py  test_churchtools_api_groups.py  test_churchtools_api_persons.py  test_churchtools_api_posts.py  test_churchtools_api_resources.py  test_churchtools_api_songs.py  test_churchtools_api_tags.py  test_ratelimitedsession.py
