[tool.poetry]
name = "churchtools_api"
version = "1.5.0"
description = "A python wrapper for use with ChurchToolsAPI"
authors = [
    "bensteUEM",
    "kolibri52",
    "fschrempf",
]
homepage = "https://github.com/bensteUEM/ChurchToolsAPI"
license = "CC-BY-SA"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-docx = "^0.8.11"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.6.1"
tomli_w = "^1.0.0"
wheel = "^0.41.2"
setuptools = "^66.1.1"
autopep8 = "^2.0.4"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
